--- a/paper/latex_macros.tex
+++ b/paper/latex_macros.tex
@@ -30,10 +30,10 @@
 \def\Obj{R}
 \def\Loss{\ell}
 \def\Reg{{\lambda}}
-\def\MaxLength{{K_{\text{max}}}}
+\def\MaxLength{{K_{\textnormal{max}}}}
 \def\RuleSet{{\mathcal S}}
-\def\Cap{\text{cap}}
-\def\Supp{\text{supp}}
+\def\Cap{\textnormal{cap}}
+\def\Supp{\textnormal{supp}}
 \def\InitialObj{R^0}
 \def\InitialRL{d^0}
 \def\CurrentObj{R^c}
