--- a/paper/content.tex
+++ b/paper/content.tex
@@ -68,21 +68,19 @@ with~$\Prefix$, and~${\Default \in \{0, 1\}}$ is the default label prediction.
 A rule list~$\RL$ classifies datum~$x_n$ by providing the label prediction~$q_k$
 of the first rule~$r_k$ whose antecedent~$p_k$ is true for~$x_n$.
 %
-We say that an antecedent~$p_k$ of prefix~$p$ captures~$x_n$ in the context of~$p$
-if~$p_k$ is the first antecedent in~$p$ that evaluates to true for~$x_n$.
+We say that an antecedent~$p_k$ of antecedent list~$\Prefix$ captures~$x_n$
+in the context of~$\Prefix$ if~$p_k$ is the first antecedent in~$\Prefix$ that
+evaluates to true for~$x_n$.
 %
-We also say that a prefix captures those data captured by its antecedents;
+We also say that an antecedent list captures those data captured by its antecedents;
 for a rule list~${\RL = (\Prefix, \Labels, \Default, K)}$,
 data not captured by the prefix~$\Prefix$
 are classified according to the default label prediction~$\Default$.
 
-Let~$\alpha$ be a single antecedent or an antecedent list,
-such as a prefix, or a set of antecedents,
-and let~$\beta$ be a list or set of antecedents
-that contains the antecedent or antecedents represented by~$\alpha$.
+Let~$\beta$ be a set of antecedents.
 %
-Let us define~${\Cap(x_n, \alpha) = 1}$ if~$\alpha$ captures datum~$x_n$,
-and~0 otherwise.
+We define~${\Cap(x_n, \beta) = 1}$ if an antecedent in~$\beta$
+captures datum~$x_n$, and~0 otherwise.
 %
 For example, let~$\Prefix$ and~$\Prefix'$ be prefixes such that~$\Prefix'$ starts
 with~$\Prefix$, then~$\Prefix'$ captures all the data that~$\Prefix$ captures:
@@ -91,21 +89,30 @@ with~$\Prefix$, then~$\Prefix'$ captures all the data that~$\Prefix$ captures:
 \label{eq:cap-subset}
 \end{align}
 %
-Let us also define~${\Cap(x_n, \alpha \given \beta) = 1}$ if~$\alpha$
-captures datum~$x_n$ in the context of~$\beta$, and~$0$ otherwise.
+Now let~$\Prefix$ be an ordered list of antecedents,
+and let~$\beta$ be a subset of antecedents in~$\Prefix$.
 %
-Note that ${\Cap(x_n, \alpha \given \beta) = 1}$ only if ${\Cap(x_n, \alpha) = 1}$;
-${\Cap(x_n, \alpha \given \beta) = 0}$ either if ${\Cap(x_n, \alpha) = 0}$,
-or if ${\Cap(x_n, \alpha) = 1}$ but there is an antecedent~$\gamma$
-preceding~$\alpha$ in~$\beta$ such that ${\Cap(x_n, \gamma) = 1}$.
+Let us define~${\Cap(x_n, \beta \given \Prefix) = 1}$ if~$\beta$
+captures datum~$x_n$ in the context of~$\Prefix$,
+\ie if the first antecedent in~$\Prefix$ that evaluates to true for~$x_n$
+is an antecedent in~$\beta$,
+and~0 otherwise.
 %
-Now, define~${\Supp(\alpha, \x)}$ to be the normalized support of~$\alpha$,
+Note that ${\Cap(x_n, \beta \given \Prefix) = 1}$ only if ${\Cap(x_n, \beta) = 1}$;
+${\Cap(x_n, \beta \given \Prefix) = 0}$ either if ${\Cap(x_n, \beta) = 0}$,
+or if ${\Cap(x_n, \beta) = 1}$ but there is an antecedent~$\alpha$ in~$\Prefix$,
+preceding all antecedents in~$\beta$, such that ${\Cap(x_n, \alpha) = 1}$.
+%
+Now, define~${\Supp(\beta, \x)}$ to be the normalized support of~$\beta$,
 \begin{align}
-\Supp(\alpha, \x) = \frac{1}{N} \sum_{n=1}^N \Cap(x_n, p),
+\Supp(\beta, \x) = \frac{1}{N} \sum_{n=1}^N \Cap(x_n, \beta),
 \label{eq:support}
 \end{align}
-and similarly define~${\Supp(\alpha, \x \given \beta)}$
-to be the normalized support of~$\alpha$ in the context of~$\beta$.
+and similarly define~${\Supp(\beta, \x \given \Prefix)}$
+to be the normalized support of~$\beta$ in the context of~$\Prefix$,
+\begin{align}
+\Supp(\beta, \x \given \Prefix) = \frac{1}{N} \sum_{n=1}^N \Cap(x_n, \beta \given \Prefix),
+\end{align}
 
 Finally, we address how empirical data constrains rule lists.
 %
