Cynthia: dont' get into cardinality, not part of regularization

--- a/paper/content.tex
+++ b/paper/content.tex
@@ -40,8 +40,8 @@ true or false for each datum~$x_n$, and a consequent~$q$ is a label prediction.
 For example,~${(x_{n, 1} = 0) \wedge (x_{n, 3} = 1) \rightarrow (y_n = 1)}$
 is an association rule that could appear in a rule list.
 %
-The number of conditions in an antecedent is its cardinality;
-the antecedent in the previous example has a cardinality of two.
+%The number of conditions in an antecedent is its cardinality;
+%the antecedent in the previous example has a cardinality of two.
 %
 The final default rule~$r_0$ in a rule list can be thought of as a special
 association rule whose antecedent simply asserts true.
