--- a/paper/content.tex
+++ b/paper/content.tex
@@ -314,7 +314,7 @@ ${b(\Prefix', \x, \y) \ge b(\Prefix, \x, \y) + \Reg}$.
 \end{proof}
 
 Thus, even if we encounter a prefix~$\Prefix$
-with lower bound~${b(\Prefix, \x, \y) < \CurrentObj}$,
+with lower bound~${b(\Prefix, \x, \y) \le \CurrentObj}$,
 if ${b(\Prefix, \x, \y) + \Reg \ge \CurrentObj}$,
 then we can prune any prefix~$\Prefix'$ longer than~$\Prefix$. \\
 %and it follows that we can also prune~$\Prefix$. \\
