--- a/paper/latex_macros.tex
+++ b/paper/latex_macros.tex
@@ -36,10 +36,12 @@
 \def\Supp{\textnormal{supp}}
 \def\InitialObj{R^0}
 \def\InitialRL{d^0}
-\def\CurrentObj{R^c}
+\def\CurrentObj{{R^c}}
 \def\CurrentRL{d^c}
 \def\OptimalObj{R^*}
 \def\OptimalRL{d^*}
+\def\Remaining{\Gamma}
+\def\Queue{Q}
 \DeclareMathOperator*{\argmin}{argmin}
 \DeclareMathOperator*{\argmax}{argmax}
 
