--- a/paper/content.tex
+++ b/paper/content.tex
@@ -795,35 +795,46 @@ prefix length~(\S\ref{sec:ub-prefix-length})
 to derive upper bounds on the number of remaining
 prefix evaluations during branch-and-bound execution.
 %
-For example, once we've evaluated the empty prefix, we'll have~${\CurrentObj \le 0.5}$,
-therefore by~\eqref{eq:max-length}, ${K = \lfloor 0.5 / c \rfloor}$ gives
-an upper bound on the maximum prefix length to consider.
-
-Suppose our state space is defined by rule lists formed from a set of~$M$ rules.
-%
-We can think of our problem as finding the optimal $k$-permutation of the~$M$ rules,
-where~${k \le K}$.
-%
-This na\"ively gives a remaining state space of size
-\begin{align}
-\sum_{k=1}^K P(M, k) = \sum_{k=1}^K \frac{M!}{(M - k)!},
-\label{eq:size-naive}
-\end{align}
-where~${P(M, k)}$ denotes the number of $k$-permutations of~$M$.
-
 At any point during branch-and-bound execution, we can calculate an upper bound
 on the number of remaining prefix evaluations from the current best
 objective~$\CurrentObj$ and information about prefixes are planning to evaluate,
 \ie prefixes in the queue~$\Queue$ of Algorithm~\ref{alg:branch-and-bound}.
 
-\subsubsection{Upper bounds on the number of remaining prefix evaluations}
+\subsubsection{Upper bounds on the number of prefix evaluations}
 \label{sec:ub-size}
 
-We present two theorems, based on the upper bounds on prefix length
-from Theorems~\ref{thm:ub-prefix-length} and~\ref{thm:ub-prefix-specific}.
+We present three theorems \dots
 %
 These bounds do not take into account symmetry-aware garbage collection,
 which we consider separately in~\S\ref{sec:permutation-counting}.
+
+\begin{theorem}[Upper bound on the total number of prefix evaluations]
+Let our state space correspond to rule lists formed from a set of~$M$ rules.
+%
+Let~$\MaxRemaining$ be the maximum number of prefixes evaluated by
+Algorithm~\ref{alg:branch-and-bound}.
+\begin{align}
+\MaxRemaining = \sum_{k=1}^K P(M, k) = \sum_{k=1}^K \frac{M!}{(M - k)!},
+\label{eq:size-naive}
+\end{align}
+where ${K = \lfloor 0.5 / c \rfloor}$.
+\end{theorem}
+
+\begin{proof}
+At the beginning of Algorithm~\ref{alg:branch-and-bound},
+the queue~${\Queue = ((),)}$ contains a single element, the empty prefix.
+%
+Once we've evaluated the empty prefix, we'll have~${\CurrentObj \le 0.5}$,
+and the queue will contain~$M$ elements.
+%
+By~\eqref{eq:max-length}, ${K = \lfloor 0.5 / c \rfloor}$ gives
+an upper bound on the length of any optimal rule list.
+%
+We can think of our problem as finding the optimal $k$-permutation of
+the~$M$ rules, where~${k \le K}$.
+%
+This gives
+\end{proof}
 
 \begin{theorem}[Upper bound on the number of remaining prefix evaluations]
 Let our state space correspond to rule lists formed from a set of~$M$ rules.
@@ -833,7 +844,7 @@ and let~$L(\Prefix)$ be the length of prefix~$\Prefix$.
 %
 Let~$n_j$ be the number of prefixes of length~$j$ in~$\Queue$,
 \begin{align}
-n_j = \sum_{\Prefix \in \Queue} \one [ L(\Prefix) = j ]
+n_j = \big | \{ \Prefix : L(\Prefix) = j, \Prefix \in \Queue \} \big |
 \end{align}
 and let~${J = \argmax_{\Prefix \in \Queue} L(\Prefix)}$
 be the length of the longest prefix in~$\Queue$.
@@ -852,18 +863,20 @@ For any prefix~$\Prefix$ remaining to be evaluated,
 Theorem~\ref{thm:ub-prefix-length} gives an upper bound on its length,
 ${L(\Prefix) \le \lfloor \CurrentObj / \Reg \rfloor}$.
 %
-Set~${K = \lfloor \CurrentObj / \Reg \rfloor}$.
+Define~${K = \lfloor \CurrentObj / \Reg \rfloor}$.
 %
 For any length-$j$ prefix~$\Prefix$ in the queue, the maximum number
 of prefixes that start with~$\Prefix$ and remain to be evaluated is:
 \begin{align}
-\sum_{k=0}^{K-j} P(M-j, k) = \sum_{k=0}^{K-j} \frac{(M-j)!}{(M-j - k)!}.
+\sum_{k=0}^{K-j} P(M-j, k) = \sum_{k=0}^{K-j} \frac{(M-j)!}{(M-j - k)!},
 \end{align}
+where~${P(T, k)}$ denotes the number of $k$-permutations of~$T$.
+%
 This gives an upper bound on the number of remaining prefix evaluations:
 \begin{align}
 \Remaining(\CurrentObj, \Queue)
-\le \sum_{j=1}^J n_j \left( \sum_{k=0}^{K-j} P(M-j, k) \right)
-= \sum_{j=1}^J n_j \left( \sum_{k=0}^{K-j} \frac{(M-j)!}{(M-j - k)!} \right).
+\le \sum_{j=0}^J n_j \left( \sum_{k=0}^{K-j} P(M-j, k) \right)
+= \sum_{j=0}^J n_j \left( \sum_{k=0}^{K-j} \frac{(M-j)!}{(M-j - k)!} \right).
 \end{align}
 \end{proof}
 
